--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./base/typography";
 
 @import "./components/buttons";
+@import "./components/switch-mode";
 
 @import "./layout/header";
 @import "./layout/sections";
@@ -13,3 +14,4 @@
 @import "./layout/career";
 @import "./layout/skills";
 @import "./layout/portfolio";
+@import "./layout/contact";
