--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,4 +7,18 @@ $color-contact: #DD5A40;
 
 $color-shadow: #1d1c22;
 
-$padding-section: 6.5rem;
+$cv-light: #FFD2C2;
+$cv-dark: #EB2B00;
+$career-light: #C9E6F8;
+$career-dark: #007ECC;
+$refer-light: #FED5FF;
+$refer-dark:#E8008F;
+$portfolio-light: #FFC2F7;
+$portfolio-dark: #8B0078;
+$skills-light: #C7FAF4;
+$skills-dark: #0D9787;
+$contact-light: #FFFEBE;
+$contact-dark:#F06800;
+
+$short-trans: 200ms;
+$middle-trans: 300ms;
