--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Krub:wght@200;300;400;500;600;700&family=Oxygen:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Nova+Square&family=Peralta&family=Rowdies:wght@300&family=Train+One&display=swap');
 
 html {
     font-family: "Oxygen", 'Lucida Sans', 'Verdana';
@@ -13,10 +14,15 @@ p, quote {
     line-height: 1.4rem;
 }
 
-h1, h2 {
-    font-family: "Bangers";
-    font-size: 1.8rem;
-    line-height: 4rem;
+h1 {
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-size: 1.4rem;
+    font-weight: 400;
 }
 
 h3, .h3 {
@@ -40,6 +46,18 @@ h5, .h5 {
 
 .light {
     opacity: 0.7;
+}
+
+.light-uppercase {
+    font-size: 1.1rem;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+.normal-uppercase {
+    font-size: 1.1rem;
+    font-weight: 400;
+    text-transform: uppercase;
 }
 
 .cv-content {
@@ -66,7 +84,7 @@ h5, .h5 {
         text-align: center;
     }
     span {
-        color: $color-contact;
+        color: var(--contact-text);
         line-height: 5rem;
     }
 }
