--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -1,41 +1,17 @@
 #home {
-    width: 100vw;
-    max-width: 100vw;
-    height: 100vh;
-    padding: 0;
-    overflow: hidden;
-    margin-top: -4rem;
-    padding-top: 4rem;
-    gap: 0;
-    flex-direction: row;
-    .home-bg {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        width: 100%;
-        isolation: isolate;
-        transition: 200ms ease-out 100ms;
-    }
-}
-
-.bg {
-    &-cv {
-        @include home-bg($color-cv);
-    }
-    &-career {
-        @include home-bg($color-career);
-    }
-    &-refer {
-        @include home-bg($color-refer);
-    }
-    &-skills {
-        @include home-bg($color-skills);
-    }
-    &-portfolio {
-        @include home-bg($color-portfolio);
-    }
-    &-contact {
-        @include home-bg($color-contact);
+    position: absolute;
+    top: 0; bottom: 0; left: 20vw; right: 0;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 3.5rem;
+    height: min-content;
+    width: min-content;
+    margin: auto;
+    transition: transform 500ms ease-in-out 100ms;
+    transform: translateX(0%) scale(100%);
+    &.narrowed {
+        transition: transform 500ms ease-in-out 250ms;
+        transform: translateX(-100%) scale(0%);
     }
 }
