--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -1,20 +1,31 @@
-section {
-    display: none;
-    flex-direction: column;
-    gap: 3rem;
-    align-items: center;
-    min-height: 100vh;
-    margin-top: -4rem;
-    padding: 10rem 6rem 6rem 6rem ;
-    &.active {
-        display: flex;
+main {
+    height: 100vh;
+    max-width: 100vw;
+    overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display: none;
     }
-    .contact-icons {
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+    .section {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         gap: 3rem;
+        min-height: 100vh;
+        height: max-content;
+        padding: 6rem 8rem;
+        margin-left: 6rem;
+        scroll-snap-align: start;
+        opacity: 0;
     }
-    &#portfolio {
-        flex-direction: row;
+    &.active {
+        .section {
+            opacity: 1;
+            transition: opacity $middle-trans ease-in 750ms;
+        }
     }
 }
