--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Krub:wght@200;300;400;500;600;700&family=Oxygen:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Nova+Square&family=Peralta&family=Rowdies:wght@300&family=Train+One&display=swap");
 *, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
@@ -7,20 +8,46 @@
 }
 
 :root {
-  --text-grey: #EEF0F2;
-  --bg-grey: #403F4C;
-}
-:root.light-mode {
   --text-grey: #403F4C;
+  --middle-grey: #dcdee1;
   --bg-grey: #EEF0F2;
+  --cv-bg: #FFD2C2;
+  --cv-text: #EB2B00;
+  --career-bg: #C9E6F8;
+  --career-text: #007ECC;
+  --refer-bg: #FED5FF;
+  --refer-text:#E8008F;
+  --portfolio-bg: #FFC2F7;
+  --portfolio-text: #8B0078;
+  --skills-bg: #C7FAF4;
+  --skills-text: #0D9787;
+  --contact-bg: #FFFEBE;
+  --contact-text:#F06800;
+  transition: 200ms ease-in-out;
+}
+:root.dark-mode {
+  --text-grey: #EEF0F2;
+  --middle-grey: #53525d;
+  --bg-grey: #403F4C;
+  /*--cv-text: #FFD2C2;
+  --cv-bg: #EB2B00;
+  --career-text: #C9E6F8;
+  --career-bg: #007ECC;
+  --refer-text: #FED5FF;
+  --refer-bg:#E8008F;
+  --portfolio-text: #FFC2F7;
+  --portfolio-bg: #8B0078;
+  --skills-text: #C7FAF4;
+  --skills-bg: #0D9787;
+  --contact-text: #FFFEBE;
+  --contact-bg:#F06800;*/
 }
 
 html {
   position: relative;
-  background-color: var(--bg-grey);
-  margin: auto;
-  scroll-behavior: smooth;
+  background-color: var(--middle-grey);
   font-size: 100%;
+  overflow: hidden;
 }
 
 ul {
@@ -49,10 +76,15 @@ p, quote {
   line-height: 1.4rem;
 }
 
-h1, h2 {
-  font-family: "Bangers";
-  font-size: 1.8rem;
-  line-height: 4rem;
+h1 {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 1.4rem;
+  font-weight: 400;
 }
 
 h3, .h3 {
@@ -78,6 +110,18 @@ h5, .h5 {
   opacity: 0.7;
 }
 
+.light-uppercase {
+  font-size: 1.1rem;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.normal-uppercase {
+  font-size: 1.1rem;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
 .cv-content h3 {
   font-size: 2.6rem;
   text-align: center;
@@ -97,57 +141,99 @@ h5, .h5 {
   text-align: center;
 }
 #contact span {
-  color: #DD5A40;
+  color: var(--contact-text);
   line-height: 5rem;
 }
 
 .btn-cv {
-  background-color: rgba(255, 153, 10, 0.2);
-  color: #FF990A;
+  background-color: var(--cv-bg);
+  color: var(--cv-text);
+  transition: 200ms ease-in-out;
 }
 .btn-cv:hover, .btn-cv:focus {
-  background-color: #FF990A;
-  color: var(--bg-grey);
+  background-color: var(--cv-text);
+  color: var(--cv-bg);
+  box-shadow: 3px 3px 9px #1d1c22;
+}
+.btn-cv.active {
+  background-color: var(--cv-text);
+  color: var(--cv-bg);
+  box-shadow: inset 1px 1px 3px #1d1c22;
 }
 .btn-career {
-  background-color: rgba(255, 56, 100, 0.2);
-  color: #FF3864;
+  background-color: var(--career-bg);
+  color: var(--career-text);
+  transition: 200ms ease-in-out;
 }
 .btn-career:hover, .btn-career:focus {
-  background-color: #FF3864;
-  color: var(--bg-grey);
+  background-color: var(--career-text);
+  color: var(--career-bg);
+  box-shadow: 3px 3px 9px #1d1c22;
+}
+.btn-career.active {
+  background-color: var(--career-text);
+  color: var(--career-bg);
+  box-shadow: inset 1px 1px 3px #1d1c22;
 }
 .btn-refer {
-  background-color: rgba(51, 184, 255, 0.2);
-  color: #33B8FF;
+  background-color: var(--refer-bg);
+  color: var(--refer-text);
+  transition: 200ms ease-in-out;
 }
 .btn-refer:hover, .btn-refer:focus {
-  background-color: #33B8FF;
-  color: var(--bg-grey);
+  background-color: var(--refer-text);
+  color: var(--refer-bg);
+  box-shadow: 3px 3px 9px #1d1c22;
+}
+.btn-refer.active {
+  background-color: var(--refer-text);
+  color: var(--refer-bg);
+  box-shadow: inset 1px 1px 3px #1d1c22;
 }
 .btn-skills {
-  background-color: rgba(224, 0, 217, 0.2);
-  color: #E000D9;
+  background-color: var(--skills-bg);
+  color: var(--skills-text);
+  transition: 200ms ease-in-out;
 }
 .btn-skills:hover, .btn-skills:focus {
-  background-color: #E000D9;
-  color: var(--bg-grey);
+  background-color: var(--skills-text);
+  color: var(--skills-bg);
+  box-shadow: 3px 3px 9px #1d1c22;
+}
+.btn-skills.active {
+  background-color: var(--skills-text);
+  color: var(--skills-bg);
+  box-shadow: inset 1px 1px 3px #1d1c22;
 }
 .btn-portfolio {
-  background-color: rgba(0, 196, 154, 0.2);
-  color: #00C49A;
+  background-color: var(--portfolio-bg);
+  color: var(--portfolio-text);
+  transition: 200ms ease-in-out;
 }
 .btn-portfolio:hover, .btn-portfolio:focus {
-  background-color: #00C49A;
-  color: var(--bg-grey);
+  background-color: var(--portfolio-text);
+  color: var(--portfolio-bg);
+  box-shadow: 3px 3px 9px #1d1c22;
+}
+.btn-portfolio.active {
+  background-color: var(--portfolio-text);
+  color: var(--portfolio-bg);
+  box-shadow: inset 1px 1px 3px #1d1c22;
 }
 .btn-contact {
-  background-color: rgba(221, 90, 64, 0.2);
-  color: #DD5A40;
+  background-color: var(--contact-bg);
+  color: var(--contact-text);
+  transition: 200ms ease-in-out;
 }
 .btn-contact:hover, .btn-contact:focus {
-  background-color: #DD5A40;
-  color: var(--bg-grey);
+  background-color: var(--contact-text);
+  color: var(--contact-bg);
+  box-shadow: 3px 3px 9px #1d1c22;
+}
+.btn-contact.active {
+  background-color: var(--contact-text);
+  color: var(--contact-bg);
+  box-shadow: inset 1px 1px 3px #1d1c22;
 }
 .btn-home {
   border: none;
@@ -156,15 +242,23 @@ h5, .h5 {
   align-items: center;
   text-align: center;
   padding: 1rem;
-  background-color: rgba(var(--text-grey), 0.2);
+  background-color: var(--bg-grey);
   color: var(--text-grey);
+  transition: 200ms ease-in-out;
 }
 .btn-home:hover, .btn-home:focus {
   background-color: var(--text-grey);
   color: var(--bg-grey);
+  box-shadow: 3px 3px 9px #1d1c22;
+}
+.btn-home.active {
+  background-color: var(--text-grey);
+  color: var(--bg-grey);
+  box-shadow: inset 1px 1px 3px #1d1c22;
 }
 
 .btn-circle {
+  position: relative;
   border: none;
   display: inline-flex;
   justify-content: center;
@@ -177,31 +271,25 @@ h5, .h5 {
   width: 13rem;
   height: 13rem;
   border-radius: 50%;
-  border: none;
-  font-size: 1.2rem;
-  background-color: var(--bg-grey);
-  transition: 250ms ease-out;
+  font-size: 1.3rem;
 }
 .btn-circle-m {
   width: 9rem;
   height: 9rem;
   border-radius: 50%;
-  border: none;
   font-size: 1rem;
 }
 .btn-circle-s {
   width: 7rem;
   height: 7rem;
   border-radius: 50%;
-  border: none;
   font-size: 1rem;
 }
 .btn-circle-xs {
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
-  border: none;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .btn-icon {
@@ -217,43 +305,33 @@ h5, .h5 {
   width: 6rem;
   height: 6rem;
   border-radius: 50%;
-  border: none;
   font-size: 3rem;
 }
 .btn-icon-contact img {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  border: none;
   font-size: 1rem;
 }
-.btn-icon-contact #malt-dark, .btn-icon-contact #malt-light {
-  display: none;
-}
-.btn-icon-contact:hover #malt-contact, .btn-icon-contact:focus #malt-contact {
+.btn-icon-contact #malt-light {
   display: none;
 }
 .btn-icon-contact:hover #malt-dark, .btn-icon-contact:focus #malt-dark {
-  display: inline-block;
-}
-.btn-icon-contact:hover.light-mode #malt-dark, .btn-icon-contact:focus.light-mode #malt-dark {
   display: none;
 }
-.btn-icon-contact:hover.light-mode #malt-light, .btn-icon-contact:focus.light-mode #malt-light {
+.btn-icon-contact:hover #malt-light, .btn-icon-contact:focus #malt-light {
   display: inline-block;
 }
 .btn-icon-s {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
-  border: none;
   font-size: 1.25rem;
 }
 .btn-icon-xs {
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  border: none;
   font-size: 1rem;
 }
 .btn-icon#send-mail {
@@ -272,177 +350,182 @@ h5, .h5 {
   box-shadow: none;
 }
 
-.btn-switch {
+.switch-mode {
+  position: absolute;
+  z-index: 3;
+  bottom: 1rem;
+  left: 1.5rem;
+  padding: 0.2rem;
+  width: 3rem;
+  height: 1.5rem;
   border: none;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 1rem;
-  width: 2.75rem;
-  height: 2rem;
+  border-radius: 1.5rem;
+  background-color: var(--middle-grey);
+  box-shadow: 1px 1px 3px #1d1c22;
+  cursor: pointer;
+  transition: 200ms ease-in-out;
 }
-.btn-switch-dark {
-  background-color: #403F4C;
-  color: #EEF0F2;
-  border-top-left-radius: 2.25rem;
-  border-bottom-left-radius: 2.25rem;
+.switch-mode .slider {
+  width: 1.1rem;
+  height: 1.1rem;
+  border-radius: 50%;
+  font-size: none;
+  background-color: var(--text-grey);
+  transform: translateX(0);
+  transition: inherit;
 }
-.btn-switch-light {
-  background-color: #EEF0F2;
-  color: #403F4C;
-  border-top-right-radius: 2.25rem;
-  border-bottom-right-radius: 2.25rem;
-}
-.btn-switch.active {
-  box-shadow: inset 1px 1px 5px #1d1c22;
+.switch-mode.dark-mode .slider {
+  transform: translateX(1.5rem);
 }
 
 header {
-  position: relative;
-  display: flex;
-  z-index: 1;
-  justify-content: space-between;
-  align-items: center;
-  gap: 4rem;
-  height: 4rem;
-  padding-left: 10rem;
-  padding-right: 1rem;
-  background-color: var(--bg-grey);
-  box-shadow: 1px 1px 3px #1d1c22;
-}
-header img {
   position: absolute;
-  top: -1.5rem;
-  left: -1.5rem;
-  height: 8rem;
-  width: 8rem;
-  border-radius: 50%;
-  box-shadow: 1px 1px 3px #1d1c22;
-}
-header h1, header h2 {
-  white-space: nowrap;
-}
-header #btn-nav-mobile {
-  display: none;
-}
-header .nav {
+  top: 0;
+  left: 0;
+  z-index: 2;
+  isolation: isolate;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1.5rem;
+  height: 100vh;
 }
-header .nav button {
-  visibility: hidden;
+header .profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  height: 100%;
+  width: 20vw;
+  padding: 2rem 2rem 4rem 2rem;
+  background-color: var(--bg-grey);
+  box-shadow: 1px 1px 3px #1d1c22;
+  transition: width 300ms ease-in 100ms;
+}
+header .profile img {
+  box-shadow: 1px 1px 3px #1d1c22;
+  margin-bottom: 1rem;
+}
+header .profile h1, header .profile h2, header .profile .profile-contact {
+  width: 100%;
+}
+header .profile .profile-contact {
+  margin-left: -1rem;
+}
+header .profile .profile-contact a:hover, header .profile .profile-contact a:focus {
+  box-shadow: none;
+}
+header .profile img, header .profile h1, header .profile h2, header .profile .profile-contact {
+  transition: opacity 200ms ease-in-out 500ms;
+}
+header nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  height: 100%;
+  width: 6rem;
+  padding-bottom: 4rem;
+  background-color: var(--bg-grey);
+  box-shadow: 1px 1px 3px #1d1c22;
+  opacity: 0;
+  transition: opacity 200ms ease-in-out 0ms;
+}
+header nav a {
   position: relative;
 }
-header .nav button:hover span {
-  transform: translateY(0);
+header nav a:hover span, header nav a:focus span {
+  transform: translateX(0);
+  transition: transform 200ms ease-in-out;
 }
-header .nav span {
+header nav span {
   position: absolute;
   z-index: -1;
-  top: 3.25rem;
-  left: -1.5rem;
+  top: 0;
+  left: 4rem;
+  width: max-content;
+  max-width: 5.5rem;
+  word-break: break-all;
   font-size: 1rem;
   padding: 0.6rem;
   background-color: inherit;
   color: inherit;
-  border-radius: 0 0 7px 7px;
-  transform: translateY(-2.5rem);
-  transition: 150ms ease-in;
+  border-radius: 0 0.5rem 0.5rem 0;
+  opacity: 0;
+  transform: translatex(-5.5rem);
 }
-header .nav #span-cv {
-  left: 0rem;
+header.narrowed .profile {
+  width: 6rem;
+  transition: width 300ms ease-in-out 250ms;
 }
-header .switch-mode {
-  display: flex;
-  gap: 0;
+header.narrowed .profile img, header.narrowed .profile h1, header.narrowed .profile h2, header.narrowed .profile .profile-contact {
+  opacity: 0;
+  transition: opacity 200ms ease-in-out 50ms;
 }
-header.active {
+header.narrowed nav {
   z-index: auto;
+  opacity: 1;
+  transition: opacity 200ms ease-in-out 750ms;
 }
-header.active nav button {
-  visibility: visible;
+header.narrowed nav span {
+  opacity: 1;
+  transition: opacity 0ms ease-in-out 950ms;
 }
 
-section {
+main {
+  height: 100vh;
+  max-width: 100vw;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+}
+main::-webkit-scrollbar {
   display: none;
+}
+main .section {
+  display: flex;
   flex-direction: column;
-  gap: 3rem;
   align-items: center;
-  min-height: 100vh;
-  margin-top: -4rem;
-  padding: 10rem 6rem 6rem 6rem;
-}
-section.active {
-  display: flex;
-}
-section .contact-icons {
-  display: flex;
-  flex-direction: row;
+  justify-content: center;
   gap: 3rem;
+  min-height: 100vh;
+  height: max-content;
+  padding: 6rem 8rem;
+  margin-left: 6rem;
+  scroll-snap-align: start;
+  opacity: 0;
 }
-section#portfolio {
-  flex-direction: row;
+main.active .section {
+  opacity: 1;
+  transition: opacity 300ms ease-in 750ms;
 }
 
 #home {
-  width: 100vw;
-  max-width: 100vw;
-  height: 100vh;
-  padding: 0;
-  overflow: hidden;
-  margin-top: -4rem;
-  padding-top: 4rem;
-  gap: 0;
-  flex-direction: row;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 20vw;
+  right: 0;
+  z-index: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 3.5rem;
+  height: min-content;
+  width: min-content;
+  margin: auto;
+  transition: transform 500ms ease-in-out 100ms;
+  transform: translateX(0%) scale(100%);
 }
-#home .home-bg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  isolation: isolate;
-  transition: 200ms ease-out 100ms;
-}
-
-.bg-cv {
-  background-color: #FF990A;
-}
-.bg-cv:hover, .bg-cv:focus {
-  background-color: rgba(255, 153, 10, 0.6);
-}
-.bg-career {
-  background-color: #FF3864;
-}
-.bg-career:hover, .bg-career:focus {
-  background-color: rgba(255, 56, 100, 0.6);
-}
-.bg-refer {
-  background-color: #33B8FF;
-}
-.bg-refer:hover, .bg-refer:focus {
-  background-color: rgba(51, 184, 255, 0.6);
-}
-.bg-skills {
-  background-color: #E000D9;
-}
-.bg-skills:hover, .bg-skills:focus {
-  background-color: rgba(224, 0, 217, 0.6);
-}
-.bg-portfolio {
-  background-color: #00C49A;
-}
-.bg-portfolio:hover, .bg-portfolio:focus {
-  background-color: rgba(0, 196, 154, 0.6);
-}
-.bg-contact {
-  background-color: #DD5A40;
-}
-.bg-contact:hover, .bg-contact:focus {
-  background-color: rgba(221, 90, 64, 0.6);
+#home.narrowed {
+  transition: transform 500ms ease-in-out 250ms;
+  transform: translateX(-100%) scale(0%);
 }
 
 .cv-content {
@@ -479,6 +562,7 @@ section#portfolio {
 .cv-content-right {
   display: flex;
   flex-direction: column;
+  background-color: var(--bg-grey);
   gap: 2rem;
   padding: 2rem 3rem 8rem 3rem;
 }
@@ -494,14 +578,6 @@ section#portfolio {
   top: -3rem;
   right: -3rem;
 }
-#download-cv::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  z-index: -1;
-  border-radius: 50%;
-  background-color: var(--bg-grey);
-}
 
 #career {
   flex-direction: row;
@@ -510,19 +586,7 @@ section#portfolio {
 }
 
 .career-title {
-  background-color: rgba(255, 56, 100, 0.2);
-  color: #FF3864;
-  box-shadow: 1px 1px 3px #1d1c22;
   cursor: pointer;
-}
-.career-title:hover, .career-title:focus {
-  background-color: #FF3864;
-  color: var(--bg-grey);
-}
-.career-title.active {
-  background-color: #FF3864;
-  color: var(--bg-grey);
-  box-shadow: inset 1px 1px 3px #1d1c22;
 }
 .career-text {
   flex: 100%;
@@ -536,7 +600,7 @@ section#portfolio {
 
 #skills i {
   padding: 0 5px;
-  color: #E000D9;
+  color: var(--skills-text);
 }
 #skills p {
   display: inline-flex;
@@ -552,79 +616,65 @@ section#portfolio {
   margin-top: 2rem;
 }
 
-.projects {
-  width: 80%;
+#portfolio {
+  flex-direction: row;
 }
-.projects-btns {
-  display: flex;
-  flex-wrap: wrap;
+#portfolio .btns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 1.5rem;
-  max-height: 65vh;
-  width: 20%;
-  padding-right: 1rem;
-  border-right: 0.1rem #00C49A solid;
 }
-.projects-btns .btn-circle-xs {
-  padding: 0.3rem;
-}
-.projects-btns .btn-circle-xs.active {
-  background-color: #00C49A;
-}
-.projects-btns img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-}
-
-.project {
+#portfolio .project {
   position: relative;
   display: none;
   justify-content: space-between;
   width: 100%;
   border-radius: 0.5rem;
+  background-color: var(--bg-grey);
   box-shadow: 1px 1px 3px #1d1c22;
   overflow: hidden;
 }
-.project-img {
+#portfolio .project-img {
   position: relative;
   z-index: 1;
   min-width: 60%;
   max-width: 60%;
-  border-radius: 0.5rem 0 0 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
   transform: translateX(0);
   transition: 250ms ease-in-out;
 }
-.project-img.hidden {
-  transform: translateX(-100%);
+#portfolio .project-img.hidden {
+  transform: translateX(-105%);
 }
-.project-main {
+#portfolio .project-main {
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
   padding: 2rem 2rem 2rem 4rem;
-  border-left: 0.3rem rgba(0, 196, 154, 0.2) solid;
+  border-left: 0.3rem var(--portfolio-bg) solid;
   overflow: hidden;
 }
-.project-main-type {
+#portfolio .project-main-type {
   margin-right: -2rem;
   margin-left: auto;
   padding: 0.5rem 1rem;
-  background-color: rgba(0, 196, 154, 0.2);
-  color: #00C49A;
+  background-color: var(--portfolio-bg);
+  color: var(--portfolio-text);
   border-radius: 5px 0 0 5px;
   box-shadow: 1px 1px 3px #1d1c22;
 }
-.project-main .h3 {
+#portfolio .project-main .h3 {
   padding-bottom: 1rem;
 }
-.project-main-links {
+#portfolio .project-main-links {
   display: flex;
   justify-content: flex-end;
   gap: 1rem;
 }
-.project-details {
+#portfolio .project-details {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -638,30 +688,37 @@ section#portfolio {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-.project-details::-webkit-scrollbar {
+#portfolio .project-details::-webkit-scrollbar {
   display: none;
 }
-.project-details-skills {
+#portfolio .project-details-skills {
   position: relative;
   display: flex;
   flex-wrap: wrap;
   gap: 0.2rem 1.5rem;
   padding: 1rem 1rem 1rem 4rem;
   border-radius: 0.5rem;
-  background-color: rgba(0, 196, 154, 0.2);
-  color: #00C49A;
+  background-color: var(--portfolio-bg);
+  color: var(--portfolio-text);
 }
-.project-details-skills .icon-tools {
+#portfolio .project-details-skills .icon-tools {
   position: absolute;
   top: 50%;
   left: 1rem;
   margin-top: -1rem;
   line-height: 2rem;
   text-align: center;
-  background-color: var(--bg-grey);
+  background-color: var(--portfolio-text);
+  color: var(--portfolio-bg);
 }
-.project.active {
+#portfolio .project.active {
   display: flex;
+}
+
+.contact-icons {
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
 }
 
 /*# sourceMappingURL=style.css.map */
